Forced push on adventure class